--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -23,6 +23,31 @@
       </div>
     <% end %>
 
+    <nav class="navbar is-info">
+     <div class="navbar-brand">
+      <%= link_to(root_path, class: 'navbar-logo') do %>
+        <h1 class="title is-10">Twitter</h1>
+      <% end %>
+
+      <div class="navbar-burger burger" data-target='navbarExample'>
+         <span></span>
+         <span></span>
+         <span></span>
+      </div>
+     </div>
+
+     <div id="navbarExample" class="navbar-menu">
+       <div class="navbar-end">
+          <div class="feild is-grouped">
+            <p class="control">
+              <%= link_to('New Tweet', new_tweet_path, class: 'button is-info is-inverter') %>
+            </p>
+            <p class="control">Sign Up</p>
+          </div>
+       </div>
+     </div>
+    </nav>
+    
     <%= yield %>
   </body>
 </html>
